增加方案選擇(暫不串接購物車)+FRONTED樣式

--- a/src/main/resources/templates/backend/ticketList.html
+++ b/src/main/resources/templates/backend/ticketList.html
@@ -461,7 +461,7 @@ $(document).ready(function() {
 <!-- 刪除資料 -->
 <script>
 function del() {
-  var msg = "確定要刪除這筆會員資料嗎？";
+  var msg = "確定要刪除這筆資料嗎？";
   if (confirm(msg)==true){
   return true;
   }else{
