--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -2,29 +2,44 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:fragment="head">
-	<title>GoTrip</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-	<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></link>
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/bootstrap/css/bootstrap.min.css}" href="vendors/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/fonts/font-awesome-4.7.0/css/font-awesome.min.css}" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/fonts/iconic/css/material-design-iconic-font.min.css}" href="fonts/iconic/css/material-design-iconic-font.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/fonts/linearicons-v1.0.0/icon-font.min.css}" href="fonts/linearicons-v1.0.0/icon-font.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/animate/animate.css}" href="vendors/animate/animate.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/css-hamburgers/hamburgers.min.css}" href="vendors/css-hamburgers/hamburgers.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/animsition/css/animsition.min.css}" href="vendors/animsition/css/animsition.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/select2/select2.min.css}" href="vendors/select2/select2.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/daterangepicker/daterangepicker.css}" href="vendors/daterangepicker/daterangepicker.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/slick/slick.css}" href="vendors/slick/slick.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/MagnificPopup/magnific-popup.css}" href="vendors/MagnificPopup/magnific-popup.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendors/perfect-scrollbar/perfect-scrollbar.css}" href="vendors/perfect-scrollbar/perfect-scrollbar.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/css/util.css}" href="css/util.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="css/main.css">
-	<link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-	<link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
-	<link th:href='@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css}' rel='stylesheet' />
-	<link rel="icon" type="image/png" th:href="@{/images/favicon.png}" />
+    <title>GoTrip</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css}" rel="stylesheet"
+          integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}"
+          integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+          crossorigin="anonymous"></link>
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/bootstrap/css/bootstrap.min.css}"
+          href="vendors/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/fonts/font-awesome-4.7.0/css/font-awesome.min.css}"
+          href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/fonts/iconic/css/material-design-iconic-font.min.css}"
+          href="fonts/iconic/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/fonts/linearicons-v1.0.0/icon-font.min.css}"
+          href="fonts/linearicons-v1.0.0/icon-font.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/animate/animate.css}" href="vendors/animate/animate.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/css-hamburgers/hamburgers.min.css}"
+          href="vendors/css-hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/animsition/css/animsition.min.css}"
+          href="vendors/animsition/css/animsition.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/select2/select2.min.css}"
+          href="vendors/select2/select2.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/daterangepicker/daterangepicker.css}"
+          href="vendors/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/slick/slick.css}" href="vendors/slick/slick.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/MagnificPopup/magnific-popup.css}"
+          href="vendors/MagnificPopup/magnific-popup.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/perfect-scrollbar/perfect-scrollbar.css}"
+          href="vendors/perfect-scrollbar/perfect-scrollbar.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}" href="css/util.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="css/main.css">
+    <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}"
+          href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+    <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}"
+          href="vendors/datatables.net-bs4/select.dataTables.min.css">
+    <link th:href='@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css}' rel='stylesheet'/>
+    <link rel="icon" type="image/png" th:href="@{/images/favicon.png}"/>
 </head>
 
 <body>
@@ -61,7 +76,10 @@
                         </li>
                         <!-- 							<li class="label1" data-label1="hot"> -->
                         <li>
-                            <a th:href="@{/toHotelIndex}">住宿</a>
+                            <a th:href="@{/ticket}">住宿</a>
+                            <ul class="sub-menu">
+                                <li><a href="showFHotelNew">刊登空房</a></li>
+                            </ul>
                         </li>
                         <!-- 							<li class="active-menu"> -->
                         <li>
@@ -87,16 +105,17 @@
                     </a>
                     <!-- 						<a th:href="@{/login}" -->
                     <div class="account p-t-22">
-	                    <a th:href="@{/backend/index}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-	                       data-notify="0">
-	                        <i class="zmdi zmdi-account"></i>
-	                    </a>
-		                <ul class="sub-menu">
-		                    <li><a th:href="@{/backend/index}">後台管理</a></li>
-		                    <li><a th:href="@{/vendor/tickets}">景點商家管理</a></li>
-		                    <li><a th:href="@{/vendor/hotels}">飯店商家管理</a></li>
-		                    <li><a th:href="@{/vendor/cars/locations/1}">租車商家管理</a></li>
-		                </ul>
+                        <a th:href="@{/backend/index}"
+                           class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+                           data-notify="0">
+                            <i class="zmdi zmdi-account"></i>
+                        </a>
+                        <ul class="sub-menu">
+                            <li><a th:href="@{/backend/index}">後台管理</a></li>
+                            <li><a th:href="@{/vendor/tickets}">景點商家管理</a></li>
+                            <li><a th:href="@{/vendor/hotels}">飯店商家管理</a></li>
+                            <li><a th:href="@{/vendor/cars/locations/1}">租車商家管理</a></li>
+                        </ul>
                     </div>
                 </div>
             </nav>
@@ -268,42 +287,39 @@
                         View Cart
                     </a>
 
-						<a href="shoping-cart.html"
-							class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
-							Check Out
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-		
-	<div th:fragment="search" class="dis-none panel-search w-full p-t-10 p-b-15">
-		<div class="bor8 dis-flex p-l-15">
-			<button class="size-113 flex-c-m fs-16 cl2 hov-cl1 trans-04">
-				<i class="zmdi zmdi-search"></i>
-			</button>
-			<input class="mtext-107 cl2 size-114 plh2 p-r-15" type="text" name="search-product" placeholder="Search">
-		</div>
-	</div>
-	
-	
-      
-      
-  <div th:fragment="filter" class="dis-none panel-filter w-full p-t-10">
-		<div class="wrap-filter flex-w bg6 w-full p-lr-40 p-t-27 p-lr-15-sm">
-			<div class="filter-col1 p-r-15 p-b-27">
-				<div class="mtext-102 cl2 p-b-15">
-					Sort By
-				</div>
                     <a href="shoping-cart.html"
                        class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
                         Check Out
                     </a>
                 </div>
             </div>
-   </div>
+        </div>
+    </div>
+</div>
 
+<div th:fragment="search" class="dis-none panel-search w-full p-t-10 p-b-15">
+    <div class="bor8 dis-flex p-l-15">
+        <button class="size-113 flex-c-m fs-16 cl2 hov-cl1 trans-04">
+            <i class="zmdi zmdi-search"></i>
+        </button>
+        <input class="mtext-107 cl2 size-114 plh2 p-r-15" type="text" name="search-product" placeholder="Search">
+    </div>
+</div>
+
+
+<div th:fragment="filter" class="dis-none panel-filter w-full p-t-10">
+    <div class="wrap-filter flex-w bg6 w-full p-lr-40 p-t-27 p-lr-15-sm">
+        <div class="filter-col1 p-r-15 p-b-27">
+            <div class="mtext-102 cl2 p-b-15">
+                Sort By
+            </div>
+            <a href="shoping-cart.html"
+               class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
+                Check Out
+            </a>
+        </div>
+    </div>
+</div>
 
 
 <div th:fragment="search" class="dis-none panel-search w-full p-t-10 p-b-15">
@@ -709,7 +725,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>s
+                    </div>
+                    s
                 </div>
 
                 <div class="col-md-6 col-lg-5 p-b-30">
