--- a/src/main/resources/templates/frontend/hotelAddNewF.html
+++ b/src/main/resources/templates/frontend/hotelAddNewF.html
@@ -225,17 +225,23 @@
                                                                class="form-control" onkeypress="return my_key(event)"/>
                                                     </fieldset>
 
-                                                    <fieldset class="form-group">
-                                                        <label>照片</label>
-                                                        <input th:field="*{productImage}" name="fileName" id="filename"
-                                                               type='file' accept="image/png, image/jpeg, image/jpg"
-                                                               multiple="multiple"/>
-                                                        <input type="button" id="submitBtn" onclick="checkSubmit()"
-                                                               value="上传"/>
-                                                    </fieldset>
+                                                    <!--                                                    <fieldset class="form-group">-->
+                                                    <!--                                                        <label>照片</label>-->
+                                                    <!--                                                        <input th:field="*{productImage}" name="fileName" id="filename"-->
+                                                    <!--                                                               type='file' accept="image/png, image/jpeg, image/jpg"-->
+                                                    <!--                                                               multiple="multiple"/>-->
+                                                    <!--                                                    </fieldset>-->
 
 
                                                     <!-- -------------------------------------------------------------以下修改 -->
+                                                    <label>照片</label>
+                                                    <input type="file" th:field="*{productImage}"
+                                                           id="progressbarTWInput"
+                                                           accept="image/gif, image/jpeg, image/png" multiple/ >
+                                                    <div id="preview_progressbarTW_imgs"
+                                                         style="width:100%; height: 300px; overflow:scroll;">
+                                                        <p>目前沒有圖片</p>
+                                                    </div>
 
 
                                                     <td>房型</td>
@@ -315,6 +321,28 @@
         document.getElementById('fullAddress').value = city + location;
     }
 
+    <!-- JavaScript part -->
+
+    $("#progressbarTWInput").change(function () {
+        $("#preview_progressbarTW_imgs").html(""); // 清除預覽
+        readURL(this);
+    });
+
+    function readURL(input) {
+        if (input.files && input.files.length >= 0) {
+            for (var i = 0; i < input.files.length; i++) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    var img = $("<img width='300' height='200'>").attr('src', e.target.result);
+                    $("#preview_progressbarTW_imgs").append(img);
+                }
+                reader.readAsDataURL(input.files[i]);
+            }
+        } else {
+            var noPictures = $("<p>目前沒有圖片</p>");
+            $("#preview_progressbarTW_imgs").append(noPictures);
+        }
+    }
 
 </script>
 
