登入頁面處理

--- a/src/main/resources/static/css/loginCSS/style.css
+++ b/src/main/resources/static/css/loginCSS/style.css
@@ -4,7 +4,7 @@
 body 
 {
     font-family:Verdana;	
-    background: url("../../images/userAccount/b2.jpg");	
+    background: url("../../images/userAccount/fuji.jpg");	
     background-repeat: no-repeat;	
     background-attachment: fixed;	
     background-position: center;	
