--- a/src/main/resources/templates/backend/hotel/hotelIndex.html
+++ b/src/main/resources/templates/backend/hotel/hotelIndex.html
@@ -2,123 +2,137 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GoTrip 後臺系統</title>
-  <!-- 本頁面使用css樣式 Plugin css for this page -->
-  <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-  <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
-  <!-- 通用css樣式 plugins:css -->
-  <link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css" >
-  <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}" href="vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css" >
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-  <link rel="shortcut icon" href="images/favicon.png" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>GoTrip 後臺系統</title>
+    <!-- 本頁面使用css樣式 Plugin css for this page -->
+    <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}"
+          href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+    <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}"
+          href="vendors/datatables.net-bs4/select.dataTables.min.css">
+    <!-- 通用css樣式 plugins:css -->
+    <link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css">
+    <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}"
+          href="vendors/ti-icons/css/themify-icons.css">
+    <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+    <link rel="shortcut icon" href="images/favicon.png"/>
 </head>
 
 <body>
-  <div class="container-scroller">
+<div class="container-scroller">
 
-      <nav th:replace="backend/partials/fragment :: navbar"></nav>
+    <nav th:replace="backend/partials/fragment :: navbar"></nav>
 
-      <div class="container-fluid page-body-wrapper">
-          <div th:replace="backend/partials/fragment :: setting"></div>
-          <nav th:replace="backend/partials/fragment :: sidebar"></nav>
+    <div class="container-fluid page-body-wrapper">
+        <div th:replace="backend/partials/fragment :: setting"></div>
+        <nav th:replace="backend/partials/fragment :: sidebar"></nav>
 
-          <!-- 主要內容 partial -->
-          <div class="main-panel">
-              <div class="content-wrapper">
+        <!-- 主要內容 partial -->
+        <div class="main-panel">
+            <div class="content-wrapper">
 
-                  <div class="row">
-                      <div class="col-md-12 grid-margin stretch-card">
-                          <div class="card">
-                              <div class="card-body">
-                                  <div class="card-title">Hotel List </div>
-                                  <div class="table-responsive">
-                                      <table id="comment-table" class="display expandable-table w-100">
+                <div class="row">
+                    <div class="col-md-12 grid-margin stretch-card">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-title">Hotel List</div>
+                                <div class="table-responsive">
+                                    <table id="comment-table" class="display expandable-table w-100">
 
-<!--                      新增區-->
-                      <a href="showForm" class="btn btn-success">ADD<i></i></a><!-- i標籤是icon -->
-                      <thead>
-                      <tr>
-                        <th>ID</th>
-                        <th>飯店名稱</th>
-                        <th>價格</th>
-                        <th>業主名稱</th>
-                        <th>電話</th>
-                        <th>狀態</th>
-                        <th>房型</th>
-                        <th>照片</th>
-                        <th>刪除</th>
-                        <th>編輯</th>
+                                        <!--                      新增區-->
+                                        <a href="showForm" class="btn btn-success">ADD<i></i></a><!-- i標籤是icon -->
+                                        <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>飯店名稱</th>
+                                            <th>價格</th>
+                                            <th>業主名稱</th>
+                                            <th>電話</th>
+                                            <th>狀態</th>
+                                            <th>房型</th>
+                                            <th>照片</th>
+                                            <th>刪除</th>
+                                            <th>編輯</th>
 
 
-                      </tr>
-                      </thead>
+                                        </tr>
+                                        </thead>
 
-                      <tbody>
-                      <tr th:each="hotel : ${Hotel}">
-                        <td th:text="${hotel.id}" />
-                        <td th:text="${hotel.hotel_name}" />
-                        <td th:text="${hotel.price}" />
-                        <td th:text="${hotel.phone}" />
-                        <td th:text="${hotel.boss_name}"/>
-                        <td th:text="${hotel.status}" />
-                        <td th:text="${hotel.roomtype}" />
-                          <td> <a th:href="@{enterPic(id=${hotel.id})}">  <img width='60' height='72' th:src="@{/picture(id=${hotel.id})}"> </a> </td>
-<!--                        <td><img width='60' height='72' th:src="@{/Goods/picture(id=${good.id})}"></td>-->
-                        <td>
-                          <button class="btn btn-sm btn-danger"
-                                  th:onclick="deleteajax([[${hotel.id}]])" type="button"
-                                  id="deleteajax">刪除<i class="bi bi-trash-fill"></i>
-                          </button>
-                        </td>
+                                        <tbody>
+                                        <tr th:each="hotel : ${Hotel}">
+                                            <td th:text="${hotel.id}"/>
+                                            <td th:text="${hotel.hotel_name}"/>
+                                            <td th:text="${hotel.price}"/>
+                                            <td th:text="${hotel.phone}"/>
+                                            <td th:text="${hotel.boss_name}"/>
+                                            <td th:text="${hotel.status}"/>
+                                            <td th:text="${hotel.roomtype}"/>
+                                            <!--                                            <td><a th:href="@{enterPic(id=${hotel.id})}"> <img width='60' height='72'-->
+                                            <!--                                                                                               th:src="@{/picture(id=${hotel.id})}">-->
+                                            <!--                                            </a></td>-->
+                                            <!--                        <td><img width='60' height='72' th:src="@{/Goods/picture(id=${good.id})}"></td>-->
+                                            <td>
+                                                <div th:each="image:${hotel.images}" class="d-inline-block">
+                                                    <img th:src="@{${image.imagePath}}" class="rounded img-com"
+                                                         width="60" height="72" style="display: inline-flex"/>
+                                                </div>
+                                            </td>
+                                            <td>
 
-                        <td>
-                            <a th:href="@{showEdit(id=${hotel.id})}"
-                               class="btn btn-sm btn-danger"><i class="bi bi-pencil-fill"></i>修改</a>
-                        </td>
+                                                <button class="btn btn-sm btn-danger"
+                                                        th:onclick="deleteajax([[${hotel.id}]])" type="button"
+                                                        id="deleteajax">刪除<i class="bi bi-trash-fill"></i>
+                                                </button>
+                                            </td>
 
-                      </tr>
+                                            <td>
+                                                <a th:href="@{showEdit(id=${hotel.id})}"
+                                                   class="btn btn-sm btn-danger"><i class="bi bi-pencil-fill"></i>修改</a>
+                                            </td>
 
-                      </tbody>
+                                        </tr>
 
-                    </table>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <footer th:replace="backend/partials/fragment :: footer"></footer>
-              <!-- partial -->
-          </div>
-      </div>
-  </div>
+                                        </tbody>
 
-  <script th:src="@{/vendors/js/vendor.bundle.base.js}" src="vendors/js/vendor.bundle.base.js"></script>
-  <script th:src="@{/js/off-canvas.js}" src="vendors/js/off-canvas.js"></script>
-  <script th:src="@{/js/hoverable-collapse.js}" src="js/hoverable-collapse.js"></script>
-  <script th:src="@{/js/template.js}" src="js/template.js"></script>
-  <script th:src="@{/js/settings.js}" src="js/settings.js"></script>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <footer th:replace="backend/partials/fragment :: footer"></footer>
+            <!-- partial -->
+        </div>
+    </div>
+</div>
 
-  <script th:src="@{/vendors/datatables.net/jquery.dataTables.js}" src="vendors/datatables.net/jquery.dataTables.js"></script>
-  <script th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}" src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-  <script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
-  <script th:src="@{/js/dashboard-comment.js}" src="js/dashboard-comment.js"></script>
-  <script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
-	<script>
-		(function ($) {
-		$(document).ready( function () {
-		    $('#comment-table').DataTable();
-		} );
-	})(jQuery);
+<script th:src="@{/vendors/js/vendor.bundle.base.js}" src="vendors/js/vendor.bundle.base.js"></script>
+<script th:src="@{/js/off-canvas.js}" src="vendors/js/off-canvas.js"></script>
+<script th:src="@{/js/hoverable-collapse.js}" src="js/hoverable-collapse.js"></script>
+<script th:src="@{/js/template.js}" src="js/template.js"></script>
+<script th:src="@{/js/settings.js}" src="js/settings.js"></script>
 
-        function deleteajax(id) {
-          console.log(id);
-          Swal.fire({
+<script th:src="@{/vendors/datatables.net/jquery.dataTables.js}"
+        src="vendors/datatables.net/jquery.dataTables.js"></script>
+<script th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}"
+        src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+<script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
+<script th:src="@{/js/dashboard-comment.js}" src="js/dashboard-comment.js"></script>
+<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
+<script>
+    (function ($) {
+        $(document).ready(function () {
+            $('#comment-table').DataTable();
+        });
+    })(jQuery);
+
+    function deleteajax(id) {
+        console.log(id);
+        Swal.fire({
             title: '請問是否要刪除此訂單?',
             text: "已刪除的訂單無法復原，請再次確認",
             icon: 'warning',
@@ -127,40 +141,40 @@
             confirmButtonColor: '#d33',
             cancelButtonColor: '#3085d6',
             confirmButtonText: '刪除'
-          }).then((result) => {
+        }).then((result) => {
             if (result.isConfirmed) {
-              $.ajax({
-                type: "get",
-                url: "/gotrip/delete/" + id,
+                $.ajax({
+                    type: "get",
+                    url: "/gotrip/delete/" + id,
 
-                success: function (msg) {
-                  Swal.fire(
-                          '已刪除!',
-                          '訂單已成功刪除!',
-                          'success'
-                  ).then((result) => {
-                    if (result.isConfirmed) {
-                      location.reload();
+                    success: function (msg) {
+                        Swal.fire(
+                            '已刪除!',
+                            '訂單已成功刪除!',
+                            'success'
+                        ).then((result) => {
+                            if (result.isConfirmed) {
+                                location.reload();
+                            }
+                        })
+                    },
+                    error: function (msg) {
+                        // console.log(msg.status)
+                        Swal.fire({
+                            icon: 'error',
+                            title: '發生錯誤',
+                            text: 'HTTP 狀態碼為 ' + msg.status,
+                            footer: '<a href="https://developer.mozilla.org/zh-TW/docs/Web/HTTP/Status"  target="_blank">怎麼有這錯誤?</a>'
+                        })
                     }
-                  })
-                },
-                error: function (msg) {
-                  // console.log(msg.status)
-                  Swal.fire({
-                    icon: 'error',
-                    title: '發生錯誤',
-                    text: 'HTTP 狀態碼為 ' + msg.status,
-                    footer: '<a href="https://developer.mozilla.org/zh-TW/docs/Web/HTTP/Status"  target="_blank">怎麼有這錯誤?</a>'
-                  })
-                }
-              });
+                });
 
 
             }
-          })
-        }
+        })
+    }
 
-	</script>
+</script>
 </body>
 
 </html>
