新增完成訂單

--- a/src/main/resources/templates/backend/order/orderList.html
+++ b/src/main/resources/templates/backend/order/orderList.html
@@ -13,11 +13,13 @@
   <!-- 本頁面使用css樣式 Plugin css for this page -->
   <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
   <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}" href="vendors/datatables.net-bs4/select.dataTables.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
 </head>
  <style>
  .formargin{
  margin-bottom:15px;
  }
+
  </style>
 <body>
 
@@ -77,9 +79,11 @@
                       			<span th:case="2">已完成</span>     
                       			</td>
                       		<td>
-                      		<button type="button" th:value="${orderBean.orderNo}" class="btn btn-success btn-detail">詳細</button></td>	
+                      		<button type="button" th:value="${orderBean.orderNo}" class="btn btn-success btn-detail">詳細</button>
+                      		<button type="button" th:onclick="completealert([[${orderBean.orderNo}]])" class="btn btn-primary btn-complete">完成訂單</button>
+                      		</td>	
                       		<td><button type="button" class="btn btn-danger btn-delete"
-                      		th:onclick="deletelert([[${orderBean.orderNo}]])" th:if="${orderBean.status == 0}">刪除</button></td>
+                      		th:onclick="deletealert([[${orderBean.orderNo}]])" th:if="${orderBean.status == 0}">刪除</button></td>
                         </tr>
                       </tbody>
                     			</table>
@@ -88,13 +92,13 @@
                     </div>
            	    </div>	
             </div>
-          </div>  	
-    
+    	</div>  
             		  <footer th:replace="backend/partials/fragment :: footer"></footer>
      	   <!-- partial -->
      	     </div>   
    		 </div>
-	  </div>     
+	  </div>
+	      
 	 
   <script th:src="@{/vendors/js/vendor.bundle.base.js}" src="vendors/js/vendor.bundle.base.js"></script>
   <script th:src="@{/js/off-canvas.js}" src="vendors/js/off-canvas.js"></script>
@@ -115,7 +119,8 @@
 		    
 	  	})
 		});
-	     function deletelert(orderNo) {
+	     function deletealert(orderNo) {
+	    	 
 	          Swal.fire({
 	            title: '是否刪除訂單?',
 	            text: "訂單無法復原，若要刪除，請按下請確認",
@@ -124,7 +129,7 @@
 	            cancelButtonText: '取消',
 	            confirmButtonColor: '#cc0808',
 	            cancelButtonColor: '#2e9e48',
-	            confirmButtonText: '刪除'
+	            confirmButtonText: '我要刪除'
 	          }).then((result) => {
 	            if (result.isConfirmed) {
 	              $.ajax({
@@ -147,15 +152,72 @@
 	                  Swal.fire({
 	                    icon: 'error',
 	                    title: '發生錯誤',
-	                    text: 'HTTP 狀態碼為 ' + msg.status,
-	                    footer: '<a href="https://developer.mozilla.org/zh-TW/docs/Web/HTTP/Status"  target="_blank">錯誤資訊</a>'
+	                    text: '訂單可能未成功刪除,請確認'                    
 	                  })
+	              	console.log(jqXHR);
+					console.log(textStatus); 
+					console.log(errorThrown);
 	                }
 	              });
 
 	            }
 	          })
-	        }
+	     }
+	     
+	   			  
+	 	 function completealert(orderNo) {
+	  		 
+	 		Swal.fire({
+	 			  title: '更改訂單狀態',
+	 			  text: "訂單狀態將變更為 已完成",
+	 			  icon: 'warning',
+	 			  showCancelButton: true,
+	 			  confirmButtonColor: '#3085d6',
+	 			  cancelButtonColor: '#d33',
+	 			 cancelButtonText: '取消',
+	 			  confirmButtonText: '確認, 我要更改'
+	 			}).then((result) => {
+	 			  if (result.isConfirmed) {
+	 			     $.ajax({
+	 	                type: "post",
+	 	                url: "/gotrip/order/changestatus",
+						data:{
+							orderId: orderNo
+						},
+	 	                success: function () {
+	 	                  Swal.fire(
+	 	                          '已更改!',
+	 	                          '已成功更改訂單狀態為已完成',
+	 	                          'success'
+	 	                  ).then((result) => {
+	 	                    if (result.isConfirmed) {
+	 	                      location.reload();
+	 	                    }
+	 	                  })
+	 	                },
+	 	                error: function (jqXHR,textStatus,errorThrown) {
+	 	                 
+	 	                  Swal.fire({
+	 	                    icon: 'error',
+	 	                    title: '錯誤',
+	 	                   	text: '訂單狀態可能未成功更改,請確認'                    
+	 	                  }).then((result) => {
+	 	                	  if (result.isConfirmed) {
+	 	                		 location.reload(); 
+	 	                	  	console.log(jqXHR);
+		 						console.log(textStatus); 
+		 						console.log(errorThrown);
+	 	                	  }
+	 	                		  });
+	 	               
+	 	                		}	 	             		
+	 	                	
+	 	                
+	 	              });
+	 			  }
+	 			})
+		  	   
+		  	 } 
 	  	$('.btn-detail').on('click', function() {
 	  		var	orderId = $(this).attr('value');
 	  		console.log(orderId);
@@ -204,7 +266,7 @@
 		  			html += '</tbody>' +
   							'</table>';	
 	  				Swal.fire({
-	
+	  				  icon: 'info',
 	  				  html:html,
 	  				  
 	  				   
@@ -224,7 +286,7 @@
 	  		
 	  	});
 	     
-	     
+	 
 	</script>	
 </body>
 
