前台商家 串接ok 開始修改

--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -848,14 +848,17 @@
     <script th:src="@{/vendors/bootstrap/js/bootstrap.min.js}" src="vendors/bootstrap/js/bootstrap.min.js"></script>
     <script th:src="@{/vendors/select2/select2.min.js}" src="vendors/select2/select2.min.js"></script>
     <script th:src="@{/vendors/daterangepicker/moment.min.js}" src="vendors/daterangepicker/moment.min.js"></script>
-    <script th:src="@{/vendors/daterangepicker/daterangepicker.js}" src="vendors/daterangepicker/daterangepicker.js"></script>
+    <script th:src="@{/vendors/daterangepicker/daterangepicker.js}"
+            src="vendors/daterangepicker/daterangepicker.js"></script>
     <script th:src="@{/vendors/slick/slick.min.js}" src="vendors/slick/slick.min.js"></script>
     <script th:src="@{/js/slick-custom.js}" src="js/slick-custom.js"></script>
     <script th:src="@{/vendors/parallax100/parallax100.js}" src="vendor/parallax100/parallax100.js"></script>
-    <script th:src="@{/vendors/MagnificPopup/jquery.magnific-popup.min.js}" src="vendors/MagnificPopup/jquery.magnific-popup.min.js"></script>
+    <script th:src="@{/vendors/MagnificPopup/jquery.magnific-popup.min.js}"
+            src="vendors/MagnificPopup/jquery.magnific-popup.min.js"></script>
     <script th:src="@{/vendors/isotope/isotope.pkgd.min.js}" src="vendors/isotope/isotope.pkgd.min.js"></script>
     <script th:src="@{/vendors/sweetalert/sweetalert.min.js}" src="vendors/sweetalert/sweetalert.min.js"></script>
-    <script th:src="@{/vendors/perfect-scrollbar/perfect-scrollbar.min.js}" src="vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script th:src="@{/vendors/perfect-scrollbar/perfect-scrollbar.min.js}"
+            src="vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script th:src="@{/js/main.js}" src="js/main.js"></script>
     <script th:src="@{/js/frontend.js}" src="js/frontend.js"></script>
     <script th:src="@{/js/rating.js}" src=""></script>
