--- a/src/main/resources/templates/frontend/car/vendor-loc-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-loc-form.html
@@ -4,216 +4,226 @@
 <head th:replace="frontend/partials/fragment :: head"></head>
 
 <body class="">
-	<!-- Header -->
-	<header th:replace="frontend/partials/fragment :: header"></header>
-	<!-- Cart 購物車 -->
-	<div th:replace="frontend/partials/fragment :: cart"></div>
+<!-- Header -->
+<header th:replace="frontend/partials/fragment :: header"></header>
+<!-- Cart 購物車 -->
+<div th:replace="frontend/partials/fragment :: cart"></div>
 
-	<section class="bg-img1 txt-center p-lr-15 p-tb-92"	th:style="'background-image: url(' + @{/images/bg-02.jpg} + ');'">
-		<h2 class="ltext-103 font-weight-bold clwhite txt-center">租車管理</h2>
-	</section>
-	<!-- Product 內文 -->
-	<div class="bg0">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 p-b-80 bg6">
-					<div class="side-menu">
-						<div class="p-t-55">
-							<h2 class="ltext-103 cl5 font-weight-bold m-b-30">租車管理</h2>
-							<ul>
-								<li class="bor18">
-									<a th:href="@{#}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
-										檢視訂單
-									</a>
-								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/locations/1}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
-										地點與車款列表
-									</a>
-								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/locations/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
-										新增地點
-									</a>
-								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
-										新增車款
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- Block2 -->
-				<div class="col-md-9 grid-margin my-5 pl-5">
-					<div class="card">
-						<div class="card-body ">
-							<h4 class="card-title font-weight-bold">租車據點</h4>
-							<form id="insertForm" name="form" th:action="@{/vendor/cars/locations}" method="post" th:object="${carLocation}"
-								  class="form-horizontal needs-validation" enctype="multipart/form-data">
-								  
-								<p class="card-description mt-4">據點資料</p>
-								<input th:field="*{id}" id="number" type="hidden"/>
-								<input th:field="*{carCompany.id}" id="number" type="hidden"/>
-								<div class="row form-group my-4">
-									<div class="col-lg-1"></div>
-									<input th:field="*{id}" id="id" type="hidden" class="form-control" placeholder="" />
-									<label class="col-lg-2 col-form-label" for="name">據點名稱</label>
-									<div class="col-lg-6">
-										<input th:field="*{name}" id="name" type="text" class="form-control" />
-										<div class="invalid-feedback">請輸入據點名稱</div>
-									</div>
-								</div>
-								
-								<div class="row form-group my-4">
-									<div class="col-lg-1"></div>
-									<label class="col-lg-2 col-form-label" for="county">縣市行政區</label>
-									<div class="col-lg-6">
-										<div class="city-selector-set row" >
-											<div class="col-4 pr-0">
-												<p id="county" th:text="*{county}" hidden="true"></p>
-												<select class="form-control county" style="background-color: white" th:field="*{county}"></select>
-											</div>
-											<div class="col-4 pr-0">
-												<p id="district" th:text="*{district}" hidden="true"></p>
-												<select class="form-control district" style="background-color: white" th:field="*{district}"></select>
-											</div>
-											<div class="col-4">
-												<input class="zipcode form-control" style="background-color: white" type="text" size="3" readonly placeholder="郵遞區號">
-											</div>
-										</div>
-									</div>
-									<div class="invalid-feedback">請選擇車款類別</div>
-								</div>
-								
-								<div class="row form-group my-4">
-									<div class="col-lg-1"></div>
-									<label class="col-lg-2 col-form-label" for="address">地址</label>
-									<div class="col-lg-6">
-										<input th:field="*{address}" id="address" type="text" class="form-control" />
-										<div class="invalid-feedback">請輸入地址</div>
-									</div>
-								</div>
-								
-								<div class="row form-group my-4">
-									<div class="col-lg-1"></div>
-									<label class="col-lg-2 col-form-label" for="phone">連絡電話</label>
-									<div class="col-lg-6">
-										<input th:field="*{phone}" id="phone" type="text" class="form-control" placeholder="02-1234-5678"/>
-										<div class="invalid-feedback">請輸入正確的電話格式</div>
-									</div>
-								</div>
-								<div class="row form-group my-4">
-									<div class="col-lg-1"></div>
-									<label class="col-lg-2 col-form-label" for="">營業時間</label>
-									<label class="col-lg-2 col-form-label" for="openTime">開始營業</label>
-									<div class="col-lg-4 mr-5">
-										<input th:value="${#strings.substring(carLocation.openTime,0,5)}" id="openTime" type="text"  name="openTime" class="form-control"/>
-										<div class="invalid-feedback">請輸入營業時間</div>
-									</div>
-								</div>
-								<div class="row form-group my-4">
-									<div class="col-lg-3"></div>
-									<label class="col-lg-2 col-form-label" for="closeTime">結束營業</label>
-									<div class="col-lg-4">
-										<input th:value="${#strings.substring(carLocation.closeTime,0,5)}" id="closeTime" type="text"  name="closeTime" class="form-control"/>
-										<div class="invalid-feedback">請輸入營業時間</div>
-									</div>
-								</div>
-								<input th:field="*{longitude}" id="longitude" type="hidden" class="form-control" />
-								<input th:field="*{latitude}" id="latitude" type="hidden" class="form-control" />
-								
-								<div class="d-flex justify-content-end">
-									<button id="btn-insert" type="submit" class="btn btn-warning mr-2 justify-content-end mr-4">
-										儲存資料
-									</button>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<section class="bg-img1 txt-center p-lr-15 p-tb-92" th:style="'background-image: url(' + @{/images/bg-02.jpg} + ');'">
+    <h2 class="ltext-103 font-weight-bold clwhite txt-center">租車管理</h2>
+</section>
+<!-- Product 內文 -->
+<div class="bg0">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 p-b-80 bg6">
+                <div class="side-menu"
+                <div class="p-t-55">
+                    <h2 class="ltext-103 cl5 font-weight-bold m-b-30">租車管理</h2>
+                    <ul>
+                        <li class="bor18">
+                            <a th:href="@{#}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+                                檢視訂單
+                            </a>
+                        </li>
+                        <li class="bor18">
+                            <a th:href="@{/vendor/cars/locations/1}"
+                               class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+                                地點與車款列表
+                            </a>
+                        </li>
+                        <li class="bor18">
+                            <a th:href="@{/vendor/cars/locations/form}"
+                               class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+                                新增地點
+                            </a>
+                        </li>
+                        <li class="bor18">
+                            <a th:href="@{/vendor/cars/options/form}"
+                               class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+                                新增車款
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- Block2 -->
+        <div class="col-md-9 grid-margin my-5 pl-5">
+            <div class="card">
+                <div class="card-body ">
+                    <h4 class="card-title font-weight-bold">租車據點</h4>
+                    <form id="insertForm" name="form" th:action="@{/vendor/cars/locations}" method="post"
+                          th:object="${carLocation}"
+                          class="form-horizontal needs-validation" enctype="multipart/form-data">
 
-	<!-- Footer -->
-	<footer th:replace="frontend/partials/fragment :: footer"></footer>
-	<!-- Back to top -->
-	<div th:replace="frontend/partials/fragment :: toTop"></div>
-	<!-- Modal1 -->
-	<div th:replace="frontend/partials/fragment :: modal1"></div>
-	<!-- javascript -->
-	<div th:replace="frontend/partials/fragment :: script"></div>
-	
-	<script th:src="@{/js/tw-city-selector.min.js}"></script>
-	<script>
-		new TwCitySelector({
-			el: '.city-selector-set',
-			elCounty: '.county', // 在 el 裡查找 element
-		    elDistrict: '.district', // 在 el 裡查找 element
-		    elZipcode: '.zipcode' // 在 el 裡查找 element
-		});
-	  	
-		$('#carModel').on('change', function(){
-	  		let carModelId = $(this).val();
-			$.ajax({
-				type: 'GET',
-				url: '/gotrip/api/cars/models/' + carModelId,
-				dataType: 'json',
-				success: function(data) {
+                        <p class="card-description mt-4">據點資料</p>
+                        <input th:field="*{id}" id="number" type="hidden"/>
+                        <input th:field="*{carCompany.id}" id="number" type="hidden"/>
+                        <div class="row form-group my-4">
+                            <div class="col-lg-1"></div>
+                            <input th:field="*{id}" id="id" type="hidden" class="form-control" placeholder=""/>
+                            <label class="col-lg-2 col-form-label" for="name">據點名稱</label>
+                            <div class="col-lg-6">
+                                <input th:field="*{name}" id="name" type="text" class="form-control"/>
+                                <div class="invalid-feedback">請輸入據點名稱</div>
+                            </div>
+                        </div>
+
+                        <div class="row form-group my-4">
+                            <div class="col-lg-1"></div>
+                            <label class="col-lg-2 col-form-label" for="county">縣市行政區</label>
+                            <div class="col-lg-6">
+                                <div class="city-selector-set row">
+                                    <div class="col-4 pr-0">
+                                        <p id="county" th:text="*{county}" hidden="true"></p>
+                                        <select class="form-control county" style="background-color: white"
+                                                th:field="*{county}"></select>
+                                    </div>
+                                    <div class="col-4 pr-0">
+                                        <p id="district" th:text="*{district}" hidden="true"></p>
+                                        <select class="form-control district" style="background-color: white"
+                                                th:field="*{district}"></select>
+                                    </div>
+                                    <div class="col-4">
+                                        <input class="zipcode form-control" style="background-color: white" type="text"
+                                               size="3" readonly placeholder="郵遞區號">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="invalid-feedback">請選擇車款類別</div>
+                        </div>
+
+                        <div class="row form-group my-4">
+                            <div class="col-lg-1"></div>
+                            <label class="col-lg-2 col-form-label" for="address">地址</label>
+                            <div class="col-lg-6">
+                                <input th:field="*{address}" id="address" type="text" class="form-control"/>
+                                <div class="invalid-feedback">請輸入地址</div>
+                            </div>
+                        </div>
+
+                        <div class="row form-group my-4">
+                            <div class="col-lg-1"></div>
+                            <label class="col-lg-2 col-form-label" for="phone">連絡電話</label>
+                            <div class="col-lg-6">
+                                <input th:field="*{phone}" id="phone" type="text" class="form-control"
+                                       placeholder="02-1234-5678"/>
+                                <div class="invalid-feedback">請輸入正確的電話格式</div>
+                            </div>
+                        </div>
+                        <div class="row form-group my-4">
+                            <div class="col-lg-1"></div>
+                            <label class="col-lg-2 col-form-label" for="">營業時間</label>
+                            <label class="col-lg-2 col-form-label" for="openTime">開始營業</label>
+                            <div class="col-lg-4 mr-5">
+                                <input th:value="${#strings.substring(carLocation.openTime,0,5)}" id="openTime"
+                                       type="text" name="openTime" class="form-control"/>
+                                <div class="invalid-feedback">請輸入營業時間</div>
+                            </div>
+                        </div>
+                        <div class="row form-group my-4">
+                            <div class="col-lg-3"></div>
+                            <label class="col-lg-2 col-form-label" for="closeTime">結束營業</label>
+                            <div class="col-lg-4">
+                                <input th:value="${#strings.substring(carLocation.closeTime,0,5)}" id="closeTime"
+                                       type="text" name="closeTime" class="form-control"/>
+                                <div class="invalid-feedback">請輸入營業時間</div>
+                            </div>
+                        </div>
+                        <input th:field="*{longitude}" id="longitude" type="hidden" class="form-control"/>
+                        <input th:field="*{latitude}" id="latitude" type="hidden" class="form-control"/>
+
+                        <div class="d-flex justify-content-end">
+                            <button id="btn-insert" type="submit" class="btn btn-warning mr-2 justify-content-end mr-4">
+                                儲存資料
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+<!-- Footer -->
+<footer th:replace="frontend/partials/fragment :: footer"></footer>
+<!-- Back to top -->
+<div th:replace="frontend/partials/fragment :: toTop"></div>
+<!-- Modal1 -->
+<div th:replace="frontend/partials/fragment :: modal1"></div>
+<!-- javascript -->
+<div th:replace="frontend/partials/fragment :: script"></div>
+
+<script th:src="@{/js/tw-city-selector.min.js}"></script>
+<script>
+    new TwCitySelector({
+        el: '.city-selector-set',
+        elCounty: '.county', // 在 el 裡查找 element
+        elDistrict: '.district', // 在 el 裡查找 element
+        elZipcode: '.zipcode' // 在 el 裡查找 element
+    });
+
+    $('#carModel').on('change', function () {
+        let carModelId = $(this).val();
+        $.ajax({
+            type: 'GET',
+            url: '/gotrip/api/cars/models/' + carModelId,
+            dataType: 'json',
+            success: function (data) {
 // 					let str = '<i class="zmdi zmdi-flash"></i> <span th:text="${option.carModel.power}" class="p-r-15"></span>'+
 // 						'<i class="zmdi zmdi-wb-auto"></i> 變速 <span th:text="${option.carModel.transmission}" class="p-r-15"></span>'+
 // 						'<i class="zmdi zmdi-airline-seat-recline-extra"></i> 座位 <span th:text="${option.carModel.seat}" class="p-r-15"></span>'+
 // 						<i class="zmdi zmdi-car"></i> 排氣量 <span th:text="${option.carModel.engine}+'cc'" class="p-r-5"></span> ';
-					$("#carModelInfo").html(str);
-				},
-				error: function() {
-					console.log('error')
-				}
-			})
-			
-		})
-		
-		$('#btn-addModel').on('click', function() {
-			
-		})
+                $("#carModelInfo").html(str);
+            },
+            error: function () {
+                console.log('error')
+            }
+        })
 
-		
-		$(document).ready(function(){
-			$('.county').focus()
-			$('.county').val($('#county').text())
-			$('.county').blur()
-			
-			$(".county option[value='"+$('.county option:selected').val($('#county').text())+"']").prop("selected",true);
-			$('.district').focus()
-			$('.district').val($('#district').text())
-			$('.district').blur()
-		})
-		
-		
-		$('#address').on('change', function () {
-			let address = $('.county').val()+"+"+$('.district').val()+"+"+$('#address').val()
-			console.log(address);
-			$.ajax({
-				url: "https://api.mapbox.com/geocoding/v5/mapbox.places/"+ address +".json",
-				method: "GET",
-				data: {
-					access_token: "pk.eyJ1IjoibHlubjgxMTExMiIsImEiOiJjbDFha2phZ28yN2tqM2RwMzZ4YncycHl5In0.QtgMdcDbNV24FrpgU4sHCw",
-					limit: 1
-				},
-				dataType: "json",
-				success: function(data) {
-					console.log(data);
-				},
-				error: function(err) {
-					console.log(err);
-				},
-			});
-	
-	
-		})
-	</script>
+    })
+
+    $('#btn-addModel').on('click', function () {
+
+    })
+
+
+    $(document).ready(function () {
+        $('.county').focus()
+        $('.county').val($('#county').text())
+        $('.county').blur()
+
+        $(".county option[value='" + $('.county option:selected').val($('#county').text()) + "']").prop("selected", true);
+        $('.district').focus()
+        $('.district').val($('#district').text())
+        $('.district').blur()
+    })
+
+
+    $('#address').on('change', function () {
+        let address = $('.county').val() + "+" + $('.district').val() + "+" + $('#address').val()
+        console.log(address);
+        $.ajax({
+            url: "https://api.mapbox.com/geocoding/v5/mapbox.places/" + address + ".json",
+            method: "GET",
+            data: {
+                access_token: "pk.eyJ1IjoibHlubjgxMTExMiIsImEiOiJjbDFha2phZ28yN2tqM2RwMzZ4YncycHl5In0.QtgMdcDbNV24FrpgU4sHCw",
+                limit: 1
+            },
+            dataType: "json",
+            success: function (data) {
+                console.log(data);
+            },
+            error: function (err) {
+                console.log(err);
+            },
+        });
+
+
+    })
+</script>
 
 </body>
 
