--- a/src/main/resources/templates/frontend/hotel/hotel-index.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-index.html
@@ -4,162 +4,171 @@
 <head th:replace="frontend/partials/fragment :: head"></head>
 
 <body class="">
-	<!-- Header -->
-	<header th:replace="frontend/partials/fragment :: header"></header>
-	<!-- Cart 購物車 -->
-	<div th:replace="frontend/partials/fragment :: cart"></div>
+<!-- Header -->
+<header th:replace="frontend/partials/fragment :: header"></header>
+<!-- Cart 購物車 -->
+<div th:replace="frontend/partials/fragment :: cart"></div>
 
-	<section class="bg-img1 txt-center p-lr-15 p-tb-92"	th:style="'background-image: url(' + @{/images/bg-02.jpg} + ');'">
-		<h2 class="ltext-103 font-weight-bold clwhite txt-center">租車管理</h2>
-	</section>
-	<!-- Product 內文 -->
-	<div class="bg0">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 p-b-80 bg6">
-					<div class="side-menu">
-						<div class="p-t-55">
-							<h2 class="ltext-103 cl5 font-weight-bold m-b-30 p-lr-20">租車管理</h2>
-							<ul class="p-lr-20">
-								<li class="bor18">
-									<a th:href="@{#}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
-										檢視訂單
-									</a>
-								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/locations/1}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
-										地點與車款列表
-									</a>
-								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/locations/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
-										新增地點
-									</a>
-								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
-										新增車款
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- Block2 -->
-				
-				<div class="col-md-9 grid-margin my-5 pl-5">
-					<div class="card">
-						<div class="card-body">
-							<h4 class="card-title font-weight-bold">租車地點列表</h4>
+<section class="bg-img1 txt-center p-lr-15 p-tb-92"
+         th:style="'background-image: url(' + @{/images/hotelpic.jpg} + ');'">
+    <h2 class="ltext-103 font-weight-bold clwhite txt-center">個人住宿管理</h2>
+</section>
+<!-- Product 內文 -->
+<div class="bg0">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 p-b-80 bg6">
+                <div class="side-menu">
+                    <div class="p-t-55">
+                        <h2 class="ltext-103 cl5 font-weight-bold m-b-30 p-lr-20">住宿管理</h2>
+                        <ul class="p-lr-20">
+                            <li class="bor18">
+                                <a th:href="@{#}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+                                    檢視訂單
+                                </a>
+                            </li>
+                            <li class="bor18">
+                                <a th:href="@{/vendor/cars/locations/1}"
+                                   class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+                                    房間列表
+                                </a>
+                            </li>
+                            <li class="bor18">
+                                <a th:href="@{/vendor/cars/locations/form}"
+                                   class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+                                    新增飯店
+                                </a>
+                            </li>
+                            <li class="bor18">
+                                <a th:href="@{/vendor/cars/options/form}"
+                                   class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+                                    新增房間
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- Block2 -->
 
-							<div class="p-t-20">
-								<table id="data-table" class="display table table-hover w-100" style="text-align: center">
-									<thead>
-										<tr>
-											<th scope="col" class="text-center">#</th>
-											<th scope="col" class="text-center">租車據點</th>
-											<th scope="col" class="text-center">縣市</th>
-											<th scope="col" class="text-center">地區</th>
-											<th scope="col" class="text-center">地址</th>
-<!-- 											<th scope="col">電話</th> -->
-<!-- 											<th scope="col">營業時間</th> -->
-											<th scope="col" class="text-center">車款數</th>
-											<th scope="col" class="text-center">資訊/修改</th>
-										</tr>
-									</thead>
-									<tbody id="tbody">
-										<tr th:each="location:${carLocations}" class="odd gradeX" scope="row">
-											<td th:text="${location.id}"></td>
-											<td th:text="${location.name}"></td>
-											<td th:text="${location.county}"></td>
-											<td th:text="${location.district}"></td>
-											<td th:text="${location.address}"></td>
-<!-- 											<td th:text="${location.phone}"></td> -->
-<!-- 											<td th:text="${#strings.substring(location.openTime,0,5) + ' ~ ' + #strings.substring(location.closeTime,0,5)}"></td> -->
-											<td th:text="${location.carOptions.size()}"></td>
-											<td>
-												<div class="btn-group" role="group" aria-label="Basic example">
-													<a th:href="@{/vendor/cars/locations/detail/{id}(id=${location.id})}" class="btn btn-light btn-rounded btn-sm">
-														<i class="fa fa-search" aria-hidden="true"></i>
-													</a>
-													<a th:href="@{/vendor/cars/locations/form/{id}(id=${location.id})}" class="btn btn-light btn-rounded btn-sm">
-														<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-													</a>
-													<form th:id="'deleteLocation' + ${location.id}" th:action="@{/vendor/cars/locations/}+${location.id}"
-														th:method="delete" class="d-inline">
-														<button type="button" th:value="${location.id}" class="btn btn-delete btn-light btn-rounded btn-sm">
-															<i class="fa fa-trash-o" aria-hidden="true"></i>
-														</button>
-													</form>
-												</div>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+            <div class="col-md-9 grid-margin my-5 pl-5">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title font-weight-bold">飯店＆房間列表</h4>
+                        <h6 class="card-title font-weight-bold">預計放房間</h6>
 
-	<!-- Footer -->
-	<footer th:replace="frontend/partials/fragment :: footer"></footer>
-	<!-- Back to top -->
-	<div th:replace="frontend/partials/fragment :: toTop"></div>
-	<!-- Modal1 -->
-	<div th:replace="frontend/partials/fragment :: modal1"></div>
-	<!-- javascript -->
-	<div th:replace="frontend/partials/fragment :: script"></div>
-	
-	<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
-	<script th:src="@{/vendors/datatables.net/jquery.dataTables.js}" src="vendors/datatables.net/jquery.dataTables.js"></script>
-	<script th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}" src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-	<script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
-	<script>
-	 $(document).ready(function() {
-		    $('#data-table').DataTable({
- 
-	  		})
-		});
-	  
-// 		$('#data-table tbody').on('click', function () {
-//          var tr = $(this).closest('tr');
-//          var row = table.row(tr);
-//          if (row.child.isShown()) {
-//              // This row is already open - close it
-//              row.child.hide();
-//              tr.removeClass('shown');
-//          }
-//          else {
-//              // Open this row
-//              row.child(format(row.data())).show();
-//              tr.addClass('shown');
-//          }
-//      })
-	  
-	  $(".btn-delete").click(function(e){
-			e.preventDefault(); // 取消原始動作
-			let id = $(this).val();
-	 			Swal.fire({
-	 				icon: 'warning',
-	 				title: '確定刪除?',
-	 				text: "確認刪除後將不可復原",
-	 				showCancelButton: true,
-	 				confirmButtonColor: '#FF8D29',
-	 				cancelButtonColor: '#FFCD38',
-	 				confirmButtonText: '確認',
-	 				cancelButtonText: '取消',
-	 				reverseButtons: true
-	 			}).then((result) => {
-	 				if (result.isConfirmed) {
-	 					$(this).parent().submit();
-	 				}
-	 			})
-			})
-			
-	</script>
+                        <div class="p-t-20">
+                            <table id="data-table" class="display table table-hover w-100" style="text-align: center">
+                                <thead>
+                                <tr>
+                                    <th scope="col" class="text-center">#</th>
+                                    <th scope="col" class="text-center">房間名稱</th>
+                                    <th scope="col" class="text-center">價格</th>
+                                    <th scope="col" class="text-center">容納人數</th>
+                                    <th scope="col" class="text-center">地址</th>
+                                    <!-- 											<th scope="col">電話</th> -->
+                                    <!-- 											<th scope="col">營業時間</th> -->
+                                    <th scope="col" class="text-center">房間數</th>
+                                    <th scope="col" class="text-center">資訊/修改</th>
+                                </tr>
+                                </thead>
+                                <tbody id="tbody">
+                                <tr th:each="location:${carLocations}" class="odd gradeX" scope="row">
+                                    <td th:text="${location.id}"></td>
+                                    <td th:text="${location.name}"></td>
+                                    <td th:text="${location.county}"></td>
+                                    <td th:text="${location.district}"></td>
+                                    <td th:text="${location.address}"></td>
+                                    <!-- 											<td th:text="${location.phone}"></td> -->
+                                    <!-- 											<td th:text="${#strings.substring(location.openTime,0,5) + ' ~ ' + #strings.substring(location.closeTime,0,5)}"></td> -->
+                                    <td th:text="${location.carOptions.size()}"></td>
+                                    <td>
+                                        <div class="btn-group" role="group" aria-label="Basic example">
+                                            <a th:href="@{/vendor/cars/locations/detail/{id}(id=${location.id})}"
+                                               class="btn btn-light btn-rounded btn-sm">
+                                                <i class="fa fa-search" aria-hidden="true"></i>
+                                            </a>
+                                            <a th:href="@{/vendor/cars/locations/form/{id}(id=${location.id})}"
+                                               class="btn btn-light btn-rounded btn-sm">
+                                                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                            </a>
+                                            <form th:id="'deleteLocation' + ${location.id}"
+                                                  th:action="@{/vendor/cars/locations/}+${location.id}"
+                                                  th:method="delete" class="d-inline">
+                                                <button type="button" th:value="${location.id}"
+                                                        class="btn btn-delete btn-light btn-rounded btn-sm">
+                                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                                </button>
+                                            </form>
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer th:replace="frontend/partials/fragment :: footer"></footer>
+<!-- Back to top -->
+<div th:replace="frontend/partials/fragment :: toTop"></div>
+<!-- Modal1 -->
+<div th:replace="frontend/partials/fragment :: modal1"></div>
+<!-- javascript -->
+<div th:replace="frontend/partials/fragment :: script"></div>
+
+<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
+<script th:src="@{/vendors/datatables.net/jquery.dataTables.js}"
+        src="vendors/datatables.net/jquery.dataTables.js"></script>
+<script th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}"
+        src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+<script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#data-table').DataTable({})
+    });
+
+    // 		$('#data-table tbody').on('click', function () {
+    //          var tr = $(this).closest('tr');
+    //          var row = table.row(tr);
+    //          if (row.child.isShown()) {
+    //              // This row is already open - close it
+    //              row.child.hide();
+    //              tr.removeClass('shown');
+    //          }
+    //          else {
+    //              // Open this row
+    //              row.child(format(row.data())).show();
+    //              tr.addClass('shown');
+    //          }
+    //      })
+
+    $(".btn-delete").click(function (e) {
+        e.preventDefault(); // 取消原始動作
+        let id = $(this).val();
+        Swal.fire({
+            icon: 'warning',
+            title: '確定刪除?',
+            text: "確認刪除後將不可復原",
+            showCancelButton: true,
+            confirmButtonColor: '#FF8D29',
+            cancelButtonColor: '#FFCD38',
+            confirmButtonText: '確認',
+            cancelButtonText: '取消',
+            reverseButtons: true
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $(this).parent().submit();
+            }
+        })
+    })
+
+</script>
 
 </body>
 
